cmake_minimum_required (VERSION 2.8.12)

# Maps to a solution filed (*.sln). The solution will
# have all targets (exe, lib, dll) as projects (.vcproj)
project(curl_example)

# Turn on the ability to create folders to organize projects (.vcproj)
# It creates "CMakePredefinedTargets" folder by default and adds CMake
# defined projects like INSTALL.vcproj and ZERO_CHECK.vcproj
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Command to output information to the console
# Useful for displaying errors, warnings, and debugging
set(CMAKE_CXX_FLAGS "-Wall -fPIC -std=c++14")
message(STATUS "Root - cxx Flags: " ${CMAKE_CXX_FLAGS})

# Handle Preprocess Flags
if (UNIX)
  add_definitions(-DUNIX)
else ()
  add_definitions(-DWINDOWS -DWIN32 "/EHsc")
endif ()

include_directories(
  /usr/local/curl/master/include)

add_executable(10-at-a-time 10-at-a-time.c)
add_executable(anyauthput anyauthput.c)
add_executable(cacertinmem cacertinmem.c)
add_executable(certinfo certinfo.c)
add_executable(chkspeed chkspeed.c)
add_executable(cookie_interface cookie_interface.c)
add_executable(curlgtk curlgtk.c)
add_executable(curlx curlx.c)
add_executable(debug debug.c)
add_executable(evhiperfifo evhiperfifo.c)
add_executable(externalsocket externalsocket.c)
add_executable(fileupload fileupload.c)
add_executable(fopen fopen.c)
add_executable(ftpget ftpget.c)
add_executable(ftpgetinfo ftpgetinfo.c)
add_executable(ftpgetresp ftpgetresp.c)
add_executable(ftpsget ftpsget.c)
add_executable(ftpupload ftpupload.c)
add_executable(ftpuploadfrommem ftpuploadfrommem.c)
add_executable(ftpuploadresume ftpuploadresume.c)
add_executable(ftp-wildcard ftp-wildcard.c)
add_executable(getinfo getinfo.c)
add_executable(getinmemory getinmemory.c)
add_executable(getredirect getredirect.c)
add_executable(ghiper ghiper.c)
add_executable(hiperfifo hiperfifo.c)
add_executable(href_extractor href_extractor.c)
add_executable(htmltidy htmltidy.c)
add_executable(http2-download http2-download.c)
add_executable(http2-serverpush http2-serverpush.c)
add_executable(http2-upload http2-upload.c)
add_executable(httpcustomheader httpcustomheader.c)
add_executable(http-post http-post.c)
add_executable(httpput httpput.c)
add_executable(https https.c)
add_executable(imap-append imap-append.c)
add_executable(imap-copy imap-copy.c)
add_executable(imap-create imap-create.c)
add_executable(imap-delete imap-delete.c)
add_executable(imap-examine imap-examine.c)
add_executable(imap-fetch imap-fetch.c)
add_executable(imap-list imap-list.c)
add_executable(imap-lsub imap-lsub.c)
add_executable(imap-multi imap-multi.c)
add_executable(imap-noop imap-noop.c)
add_executable(imap-search imap-search.c)
add_executable(imap-ssl imap-ssl.c)
add_executable(imap-store imap-store.c)
add_executable(imap-tls imap-tls.c)
add_executable(multi-app multi-app.c)
add_executable(multi-debugcallback multi-debugcallback.c)
add_executable(multi-double multi-double.c)
add_executable(multi-formadd multi-formadd.c)
add_executable(multi-post multi-post.c)
add_executable(multi-single multi-single.c)
add_executable(multithread multithread.c)
add_executable(multi-uv multi-uv.c)
add_executable(opensslthreadlock opensslthreadlock.c)
add_executable(persistant persistant.c)
add_executable(pop3-dele pop3-dele.c)
add_executable(pop3-list pop3-list.c)
add_executable(pop3-multi pop3-multi.c)
add_executable(pop3-noop pop3-noop.c)
add_executable(pop3-retr pop3-retr.c)
add_executable(pop3-ssl pop3-ssl.c)
add_executable(pop3-stat pop3-stat.c)
add_executable(pop3-tls pop3-tls.c)
add_executable(pop3-top pop3-top.c)
add_executable(pop3-uidl pop3-uidl.c)
add_executable(post-callback post-callback.c)
add_executable(postinmemory postinmemory.c)
add_executable(postit2 postit2.c)
add_executable(postit2-formadd postit2-formadd.c)
add_executable(progressfunc progressfunc.c)
add_executable(resolve resolve.c)
add_executable(rtsp rtsp.c)
add_executable(sampleconv sampleconv.c)
add_executable(sendrecv sendrecv.c)
add_executable(sepheaders sepheaders.c)
add_executable(sessioninfo sessioninfo.c)
add_executable(sftpget sftpget.c)
add_executable(shared-connection-cache shared-connection-cache.c)
add_executable(simple simple.c)
add_executable(simplepost simplepost.c)
add_executable(simplessl simplessl.c)
add_executable(smooth-gtk-thread smooth-gtk-thread.c)
add_executable(smtp-expn smtp-expn.c)
add_executable(smtp-mail smtp-mail.c)
add_executable(smtp-mime smtp-mime.c)
add_executable(smtp-multi smtp-multi.c)
add_executable(smtp-ssl smtp-ssl.c)
add_executable(smtp-tls smtp-tls.c)
add_executable(smtp-vrfy smtp-vrfy.c)
add_executable(sslbackend sslbackend.c)
add_executable(synctime synctime.c)
add_executable(threaded-shared-conn threaded-shared-conn.c)
add_executable(threaded-ssl threaded-ssl.c)
add_executable(url2file url2file.c)
add_executable(usercertinmem usercertinmem.c)
add_executable(xmlstream xmlstream.c)

if (UNIX)
  target_link_libraries(10-at-a-time debug /usr/local/curl/master/lib/libcurl.so optimized /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(anyauthput debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(cacertinmem debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(certinfo debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(chkspeed debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(cookie_interface debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(curlgtk debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(curlx debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(debug debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(evhiperfifo debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(externalsocket debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(fileupload debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(fopen debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpget debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpgetinfo debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpgetresp debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpsget debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpupload debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpuploadfrommem debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftpuploadresume debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ftp-wildcard debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(getinfo debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(getinmemory debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(getredirect debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(ghiper debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(hiperfifo debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(href_extractor debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(htmltidy debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(http2-download debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(http2-serverpush debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(http2-upload debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(httpcustomheader debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(http-post debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(httpput debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(https debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-append debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-copy debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-create debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-delete debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-examine debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-fetch debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-list debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-lsub debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-multi debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-noop debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-search debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-ssl debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-store debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(imap-tls debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-app debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-debugcallback debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-double debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-formadd debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-post debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-single debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multithread debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(multi-uv debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(opensslthreadlock debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(persistant debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-dele debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-list debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-multi debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-noop debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-retr debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-ssl debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-stat debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-tls debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-top debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(pop3-uidl debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(post-callback debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(postinmemory debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(postit2 debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(postit2-formadd debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(progressfunc debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(resolve debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(rtsp debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(sampleconv debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(sendrecv debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(sepheaders debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(sessioninfo debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(sftpget debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(shared-connection-cache debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(simple debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(simplepost debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(simplessl debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smooth-gtk-thread debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-expn debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-mail debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-mime debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-multi debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-ssl debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-tls debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(smtp-vrfy debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(sslbackend debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(synctime debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(threaded-shared-conn debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(threaded-ssl debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(url2file debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(usercertinmem debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
  target_link_libraries(xmlstream debug /usr/local/curl/master/lib/libcurl.so release /usr/local/curl/master/lib/libcurl.so)
else ()
endif()
